--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,5 +13,8 @@
     "nuxt": "^3.13.2",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "typescript": "^5.6.3"
   }
 }
