--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,16 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "nuxt": "^3.13.2",
-    "vue": "latest",
-    "vue-router": "latest"
+    "nuxt": "^3.14.0",
+    "pinia": "^2.2.6",
+    "@pinia/nuxt": "^0.7.0",
+    "vue": "^3.5.12",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "typescript": "^5.6.3"
+  },
+  "overrides": {
+    "vue": "latest"
   }
 }
