--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,16 +10,21 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "nuxt": "^3.14.0",
-    "pinia": "^2.2.6",
+    "@nuxtjs/tailwindcss": "^6.12.2",
     "@pinia/nuxt": "^0.7.0",
+    "nuxt": "^3.14.0",
+    "nuxt-socket-io": "^3.0.13",
+    "pinia": "^2.2.6",
+    "socket-io": "^1.0.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
-  },
-  "overrides": {
-    "vue": "latest"
   }
 }
